2017-08-04 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: changes demanded by windows compiler

2017-08-04 Georgios Petasis <petasis@apache.org>
	* cmake\CMakeLists.txt: Various changes for better support build under
	Windows.

	* cmake\README.cmake: Added a section for building under Windows.

	* cmake\cmake_extra_modules\FindAPACHE.cmake: Enhanced customisability.
	The user can guide detection with variables APACHE_INCLUDE_DIR_HINTS,
	APACHE_MODULE_DIR_HINTS, APACHE_LIB_DIR_HINTS, APACHE_ROOT.

	* cmake\cmake_extra_modules\FindAPR.cmake: Enhanced customisability.
	The user can guide detection with variables APR_INCLUDE_DIR_HINTS,
	APACHE_INCLUDE_DIR_HINTS, APACHE_ROOT, APR_LIBRARY_HINTS,
	APRUTIL_INCLUDE_DIR_HINTS, APRUTIL_LIBRARY_HINTS.

2017-08-03 Georgios Petasis <petasis@apache.org>
	* CMake build system: Removed "lib" prefix from some libraris.

2017-08-03 Georgios Petasis <petasis@apache.org>
	* CMake build system: Added support for installing Rivet. Added more
	checks for various definitions in config.h/rivet_config.h.

2017-08-03 Georgios Petasis <petasis@apache.org>
	* CMake build system: Added missing source files, enabled as default
	the build of shared libraries, added needed link libraries. Also
	extended build system for all Rivet libraries (librivetlib.so,
	librivetparser.so, librivet_worker_mpm.so, librivet_prefork_mpm.so,
	librivet_lazy_mpm.so), and checked their linked libraries and missing
	symbols with their versions when build with autoconf.

2017-08-02 Massimo Manghi <mxmanghi@apache.org>
	* Changed references in cmake/CMakeList.txt to build with
	code in src/mod_rivet_ng.

2017-08-02 Georgios Petasis <petasis@apache.org>
	* Created a new branch (cmake) for the CMake build system.

2017-07-24 Massimo Manghi <mxmanghi@apache.org>
	* xml/rivet.xml.in: reflects rivet.xml having been moved to doc/xml
	* rivet/default_request_handler.tcl: code of the default 
	request handler read by mod_rivet